Cleaned up MangoBotLaunchTarget stuff...